interop_sw: do not rely on i_visible_pitch

The meaning of i_visible_pitch in plane_t is broken: exposing the
visible area size without knowing the offset is meaningless (it may only
be used correctly when there is no offset). See !2879.

Rework the software OpenGL interop to avoid using its value.

Fixes #27264